<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="28dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bottom_curved"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/mail_image_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#00FFFFFF"
                android:padding="1dp"
                android:src="@drawable/ic_outline_mail_24"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toStartOf="@+id/profileImage"
                app:layout_constraintTop_toTopOf="@+id/profileImage" />

            <ImageButton
                android:id="@+id/notification_image_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#00FFFFFF"
                android:padding="1dp"
                android:src="@drawable/ic_baseline_notifications_none_24"
                app:layout_constraintBottom_toBottomOf="@+id/mail_image_btn"
                app:layout_constraintEnd_toStartOf="@+id/mail_image_btn"
                app:layout_constraintTop_toTopOf="@+id/mail_image_btn" />

            <ImageButton
                android:id="@+id/search_image_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#00FFFFFF"
                android:padding="1dp"
                android:src="@drawable/ic_baseline_search_24"
                app:layout_constraintBottom_toBottomOf="@+id/notification_image_btn"
                app:layout_constraintEnd_toStartOf="@+id/notification_image_btn"
                app:layout_constraintTop_toTopOf="@+id/notification_image_btn" />

            <TextView
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/notification_ring"
                app:layout_constraintEnd_toEndOf="@+id/mail_image_btn"
                app:layout_constraintTop_toTopOf="@+id/mail_image_btn" />

            <TextView
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/notification_ring"
                app:layout_constraintEnd_toEndOf="@+id/notification_image_btn"
                app:layout_constraintTop_toTopOf="@+id/notification_image_btn" />


            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView"

                app:layout_constraintVertical_bias="0.875" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:background="@drawable/corner_round_border"
                android:gravity="center"
                android:text="30 coins"
                android:layout_marginTop="-2dp"
                android:textColor="@color/white"
                android:textSize="9sp"
                app:layout_constraintEnd_toEndOf="@+id/profileImage"
                app:layout_constraintStart_toStartOf="@+id/profileImage"
                app:layout_constraintTop_toBottomOf="@+id/profileImage" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"

                >

                <LinearLayout
                    android:id="@+id/scan_Ll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/faded_bg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_weight=".5"
                            android:text="@string/scan"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                        <ImageButton
                            android:id="@+id/scan_image_btn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:backgroundTint="#00FFFFFF"
                            android:gravity="end"
                            android:padding="1dp"
                            android:src="@drawable/ic_baseline_arrow_forward_24"
                            app:layout_constraintBottom_toBottomOf="@+id/textView2"
                            app:layout_constraintEnd_toStartOf="@+id/profileImage"
                            app:layout_constraintTop_toTopOf="@+id/profileImage" />


                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/lorem_ipsum_dolor_sit_amet_consecutor"
                        android:textColor="@color/white"
                        android:textSize="15sp" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sell_Ll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="12dp"
                    android:layout_weight="1"
                    android:background="@drawable/faded_bg"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">


                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_weight=".5"
                            android:text="@string/sell"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                        <ImageButton
                            android:id="@+id/sell_image_btn"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:backgroundTint="#00FFFFFF"
                            android:gravity="end"
                            android:padding="1dp"
                            android:src="@drawable/ic_baseline_arrow_forward_24"
                            app:layout_constraintBottom_toBottomOf="@+id/textView2"
                            app:layout_constraintEnd_toStartOf="@+id/profileImage"
                            app:layout_constraintTop_toTopOf="@+id/profileImage" />




                    </LinearLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="lorem ipsum dolor sit amet, consecutor"
                        android:textColor="@color/white"
                        android:textSize="15sp" />


                </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="30dp"
                android:text="@string/my_dashboard"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/constraint_lay"
                app:layout_constraintTop_toTopOf="@id/constraint_lay" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="Available to Buy"

        android:textColor="@color/purple_500"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll1" />

    <TextView
        android:id="@+id/see_all_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_all"
        android:textColor="#0D5CE8"
        app:layout_constraintTop_toBottomOf="@+id/ll1"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_frag_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


</androidx.constraintlayout.widget.ConstraintLayout>